Added a Player blueprint and a Test Level

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Levels/Test.Test
+EditorStartupMap=/Game/Levels/Test.Test
+GlobalDefaultGameMode=/Game/Blueprints/RPGGameMode.RPGGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
