Added proper Magic Circles spawning before spawning projectiles from them on the Base Attack Ability and made them home in on enemies when they enter an area around the enemy, also fixed the projectiles to not be blocked by the player.

--- a/ProjectU.uproject
+++ b/ProjectU.uproject
@@ -7,7 +7,16 @@
 		{
 			"Name": "ProjectU",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject"
+			]
+		}
+	],
+	"Plugins": [
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
