Implemented the grappling ability, without checking for hits along the way, might change the linetrace to be capsule trace instead and upgraded engine to 4.27.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -92,6 +92,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="HotbarSlot4",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
 +ActionMappings=(ActionName="HotbarSlot5",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
 +ActionMappings=(ActionName="HotbarSlot6",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
++ActionMappings=(ActionName="Test",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
++ActionMappings=(ActionName="Test2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
