Added EarthUtility Ability and cleaned up the other abilities in general.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,7 +5,7 @@ ProjectID=2B38B6F8451D8705322A4B8F1B7860EF
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_DebugGame
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="B:/MikeS/Dev/Unreal Engine/Games/ProjectU/Saved/Package")
 FullRebuild=False
@@ -16,6 +16,7 @@ bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
 bUseIoStore=False
+bMakeBinaryConfig=False
 bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
@@ -23,8 +24,14 @@ bForceOneChunkPerFile=False
 MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
+bCompressed=False
 PakFileCompressionFormats=
+bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
 PakFileAdditionalCompressionOptions=
+PakFileCompressionMethod=Kraken
+PakFileCompressionLevel_DebugDevelopment=3
+PakFileCompressionLevel_TestShipping=5
+PakFileCompressionLevel_Distribution=7
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
@@ -38,8 +45,7 @@ InternationalizationPreset=English
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
-bCookMapsOnly=False
-bCompressed=False
+bCookMapsOnly=True
 bSkipEditorContent=False
 bSkipMovies=False
 -IniKeyBlacklist=KeyStorePassword
@@ -66,4 +72,5 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/Levels/Test")
 
