Adding Sight sense to BP_EnemyAIController

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -73,4 +73,5 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Levels/Test")
+bAutoRegisterAllPawnsAsSource=false
 
