Disable stimuli for all pawns by default

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -73,5 +73,7 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Levels/Test")
+
+[/Script/AIModule.AISense_Sight]
 bAutoRegisterAllPawnsAsSource=false
 
