Added the Earth Zone to the main game, also tweaked the hotbar look.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -72,5 +72,5 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/Levels/Test")
++MapsToCook=(FilePath="/Game/Maps/Test")
 
