Added Main Menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Test.Test
+GameDefaultMap=/Game/Maps/MainMenuLevel.MainMenuLevel
 EditorStartupMap=/Game/Maps/Test.Test
 GlobalDefaultGameMode=/Game/Blueprints/BP_RPGGameMode.BP_RPGGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_RPGGameInstance.BP_RPGGameInstance_C
