Added the NatureDefense Ability and corresponding status effect, also added references to the meshes in the ai test characters.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -73,6 +73,8 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/Test")
++MapsToCook=(FilePath="/Game/Maps/Zones/WindZone/WindZone")
++MapsToCook=(FilePath="/Game/Maps/MainMenu")
 
 [/Script/AIModule.AISense_Sight]
 bAutoRegisterAllPawnsAsSource=false
