Fixed the wonky ui toggle.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,7 +88,7 @@ bRemoteExecution=True
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure=True
 r.Streaming.PoolSize=2000
 r.DefaultFeature.AntiAliasing=2
 
