Fixed a bug with the EarthDefense ability and fixed a meshing bug with the wind zone.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,4 +91,5 @@ bRemoteExecution=True
 r.DefaultFeature.AutoExposure=True
 r.Streaming.PoolSize=2000
 r.DefaultFeature.AntiAliasing=2
+r.DefaultFeature.AutoExposure.Method=0
 
