Added new version of the windzone map with new landscape material that uses virtual textures and more blocking volumes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-<<<<<<< HEAD
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
-=======
-GameDefaultMap=/Game/Maps/MainMenu.MainMenu
->>>>>>> main
+GameDefaultMap=/Game/Maps/Zones/Wind/TestWindZone.TestWindZone
 EditorStartupMap=/Game/Maps/Test.Test
 GlobalDefaultGameMode=/Game/Blueprints/BP_RPGGameMode.BP_RPGGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_RPGGameInstance.BP_RPGGameInstance_C
@@ -92,4 +88,6 @@ r.DefaultFeature.AutoExposure=True
 r.Streaming.PoolSize=2000
 r.DefaultFeature.AntiAliasing=2
 r.DefaultFeature.AutoExposure.Method=0
+r.EarlyZPass=3
+r.VirtualTextures=True
 
