--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,4 +92,11 @@ r.DefaultFeature.AutoExposure=True
 r.Streaming.PoolSize=2000
 r.DefaultFeature.AntiAliasing=2
 r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.LightUnits=1
+r.TemporalAA.Upsampling=False
+r.DefaultFeature.AmbientOcclusion=True
+r.BasePassOutputsVelocity=True
+r.VertexDeformationOutputsVelocity=True
 
