--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Zones/Wind/TestWindZone.TestWindZone
-EditorStartupMap=/Game/Maps/Test.Test
+EditorStartupMap=/Game/Maps/Zones/Wind/TestWindZone.TestWindZone
 GlobalDefaultGameMode=/Game/Blueprints/BP_RPGGameMode.BP_RPGGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_RPGGameInstance.BP_RPGGameInstance_C
 
@@ -90,4 +90,11 @@ r.DefaultFeature.AntiAliasing=2
 r.DefaultFeature.AutoExposure.Method=0
 r.EarlyZPass=3
 r.VirtualTextures=True
+r.SkinCache.CompileShaders=True
+r.RayTracing=False
+r.VirtualTexturedLightmaps=True
+r.NormalMapsForStaticLighting=True
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 
