Fixes to the abilities

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -74,6 +74,7 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/Zones/Wind/MainMenu")
 +MapsToCook=(FilePath="/Game/Maps/Zones/Wind/WindZone")
++MapsToCook=(FilePath="/Game/Maps/Test")
 
 [/Script/AIModule.AISense_Sight]
 bAutoRegisterAllPawnsAsSource=false
