Updated map, updated wbp sidequests, updated subquest logic

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Zones/Wind/MainMenu.MainMenu
-EditorStartupMap=/Game/Maps/Test.Test
+EditorStartupMap=/Game/Maps/Zones/Wind/WindZone.WindZone
 GlobalDefaultGameMode=/Game/Blueprints/BP_RPGGameMode.BP_RPGGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_RPGGameInstance.BP_RPGGameInstance_C
 
